0.5.4 2008-10-21
* include Chris Martin's patches
* rename Gem to match Amazon's new name for ECS - Amazon Associates API
* update to git gemspec format

0.5.3 2007-09-12
----------------
* send_request to use default options.

0.5.2 2007-09-08
----------------
* Fixed Amazon::Element.get_unescaped error when result returned for given element path is nil

0.5.1 2007-02-08
----------------
* Fixed Amazon Japan and France URL error
* Removed opts.delete(:search_index) from item_lookup, SearchIndex param is allowed 
  when looking for a book with IdType other than the ASIN.
* Check for defined? RAILS_DEFAULT_LOGGER to avoid exception for non-rails ruby app
* Added check for LOGGER constant if RAILS_DEFAULT_LOGGER is not defined
* Added Ecs.configure(&proc) method for easier configuration of default options
* Added Element#search_and_convert method

0.5.0 2006-09-12
----------------
Initial Release