@@ -1,18 +1,22 @@
 class Amazon::CacheFactory
-  def self.cache(request, response, options)
-    strategy_class_hash[options[:caching_strategy]].cache(request, response, options)
+  def self.cache(request, response, strategy)
+    strategy_class_hash[strategy].cache(request, response)
   end
   
-  def self.validate(options)
+  def self.initialize_options(options)
     #check for a valid caching strategy
     unless self.strategy_class_hash.keys.include?(options[:caching_strategy])
       raise Amazon::ConfigurationError, "Invalid caching strategy" 
     end
-    strategy_class_hash[options[:caching_strategy]].validate(options)
+    strategy_class_hash[options[:caching_strategy]].initialize_options(options)
   end
   
-  def self.get(request, options)
-    strategy_class_hash[options[:caching_strategy]].get(request, options)
+  def self.get(request, strategy)
+    strategy_class_hash[strategy].get(request)
+  end
+  
+  def self.sweep(strategy)
+    strategy_class_hash[strategy].sweep
   end
   
   private
