@@ -27,6 +27,36 @@ class Amazon::CachingStrategy::FilesystemTest < Test::Unit::TestCase
         end
       end
     end
+    
+    should "set default values for disk_quota and sweep_frequency" do
+      Amazon::Ecs.configure do |options|
+        options[:caching_strategy] = :filesystem
+        options[:caching_options] = {:cache_path => "."}
+      end
+      
+      assert_equal Amazon::CachingStrategy::Filesystem.disk_quota, Amazon::CachingStrategy::Filesystem.disk_quota
+      assert_equal Amazon::CachingStrategy::Filesystem.sweep_frequency, Amazon::CachingStrategy::Filesystem.sweep_frequency
+    end
+    
+    should "override the default value for disk quota if I specify one" do
+      quota = 400
+      Amazon::Ecs.configure do |options|
+        options[:caching_strategy] = :filesystem
+        options[:caching_options] = {:cache_path => ".", :disk_quota => quota}
+      end
+      
+      assert_equal quota, Amazon::CachingStrategy::Filesystem.disk_quota
+    end
+    
+    should "override the default value for cache_frequency if I specify one" do
+      frequency = 4
+      Amazon::Ecs.configure do |options|
+        options[:caching_strategy] = :filesystem
+        options[:caching_options] = {:cache_path => ".", :sweep_frequency => frequency}
+      end
+      
+      assert_equal frequency, Amazon::CachingStrategy::Filesystem.sweep_frequency
+    end
   end
   
   context "caching a request" do
@@ -82,6 +112,53 @@ class Amazon::CachingStrategy::FilesystemTest < Test::Unit::TestCase
       do_request
       assert_equal(original, @resp.doc.to_s)
     end
+  end
+  
+  context "sweeping cached requests" do
+    setup do
+      get_cache_directory
+      get_valid_caching_options
+      do_request
+    end
+    
+    teardown do
+      destroy_cache_directory
+      destroy_caching_options
+    end
+    
+    should "not perform the sweep if the timestamp is within the range of the sweep frequency and quota is not exceeded" do
+      Amazon::CachingStrategy::Filesystem.expects(:sweep_time_expired?).returns(false)
+      Amazon::CachingStrategy::Filesystem.expects(:disk_quota_exceeded?).returns(false)
+      
+      Amazon::CachingStrategy::Filesystem.expects(:perform_sweep).never
+      
+      do_request
+    end
+    
+    should "perform a sweep if the quota is exceeded" do
+      Amazon::CachingStrategy::Filesystem.stubs(:sweep_time_expired?).returns(false)
+      Amazon::CachingStrategy::Filesystem.expects(:disk_quota_exceeded?).once.returns(true)
+      
+      Amazon::CachingStrategy::Filesystem.expects(:perform_sweep).once
+      
+      do_request
+    end
+    
+    should "perform a sweep if the sweep time is expired" do
+      Amazon::CachingStrategy::Filesystem.expects(:sweep_time_expired?).once.returns(true)
+      Amazon::CachingStrategy::Filesystem.stubs(:disk_quota_exceeded?).returns(false)
+      Amazon::CachingStrategy::Filesystem.expects(:perform_sweep).once
+      
+      do_request
+    end
+    
+    should "create a timestamp file after performing a sweep" do
+      Amazon::CachingStrategy::Filesystem.expects(:sweep_time_expired?).once.returns(true)
+      
+      do_request
+      assert FileTest.exists?(File.join(@@cache_path, ".amz_timestamp"))
+    end
+    
   end
 
   protected
